--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -6,9 +6,7 @@
     "extends": [
         "plugin:react/recommended",
         "plugin:@typescript-eslint/recommended",
-        "airbnb",
-        "prettier/@typescript-eslint",
-        "plugin:prettier/recommended"
+        "airbnb"
     ],
     "parser": "@typescript-eslint/parser",
     "parserOptions": {
@@ -21,13 +19,13 @@
     "plugins": [
         "react",
         "react-hooks",
-        "@typescript-eslint",
-        "prettier"
+        "@typescript-eslint"
     ],
     "rules": {
       "react-hooks/rules-of-hooks": "error",
       "react-hooks/exhaustive-deps": "warn",
       "react/jsx-filename-extension": [1, { "extensions": [".tsx"] }],
+      "react/jsx-one-expression-per-line" : "off",
       "import/prefer-default-export": "off",
       "camelcase": "off",
       "@typescript-eslint/ban-types": "off",
@@ -38,9 +36,8 @@
           "ts": "never",
           "tsx": "never"
         }
-      ],
-      "prettier/prettier": "error",
-      "no-use-before-define": "off"
+     ],
+     "no-use-before-define": "off"
     },
     "settings": {
       "import/resolver": {
